--- a/public/display.html
+++ b/public/display.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.11</title>
+  <title>Laserpointer Display v3.12</title>
   <style>
     body { margin:0; background:black; }
     canvas { display:block; margin:auto; background:black; }
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.11 (multi-user)</div>
+  <div id="version">v3.12 (multi-user + smoothing)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
@@ -26,37 +26,50 @@
           CX   = c.width/2,
           CY   = c.height/2;
 
-    // Standard-Werte (können per Admin geändert werden)
-    let MAX_H  = 20, MAX_V = 20, SMOOTH = 0.15;
+    // Defaults (werden per Admin überschrieben)
+    let MAX_H   = 20,
+        MAX_V   = 20,
+        SMOOTH  = 0.15;
 
-    // Pro Gerät
-    const alpha0Map = {},
-          beta0Map  = {},
-          lastPos   = {},   // deviceId → { x, y }
-          lastColor = {},   // deviceId → HSL-String
-          segments  = [];
+    // Datenstrukturen pro Gerät
+    const alpha0Map   = {},        // Kalibrier-Nullpunkt alpha
+          beta0Map    = {},        // Kalibrier-Nullpunkt beta
+          rawPos      = {},        // deviceId → { x, y }
+          smoothPos   = {},        // deviceId → { x, y } geglättet
+          lastColor   = {},        // deviceId → color
+          lastLight   = {},        // deviceId → lightness %
+          segments    = [];        // alle Liniensegmente
 
     ctx.lineCap  = "round";
     ctx.lineJoin = "round";
 
+    // Admin-Einstellungen live übernehmen
     socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
       if (typeof maxH   === "number") MAX_H  = maxH;
       if (typeof maxV   === "number") MAX_V  = maxV;
       if (typeof smooth === "number") SMOOTH = smooth;
     });
 
+    // Neue Bewegungsdaten
     socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
       if (!deviceId || typeof alpha!=="number" || typeof beta!=="number") return;
 
-      // Kalibrieren beim ersten Zeichnen
+      // Lightness aus HSL extrahieren
+      const m = color.match(/hsl\([^,]+,\s*[^,]+,\s*(\d+)%\)/);
+      const light = m ? parseInt(m[1],10) : 50;
+      lastLight[deviceId] = light;
+      lastColor[deviceId] = color;
+
+      // Kalibrierung beim ersten Zeichnen
       if (isDrawing && !(deviceId in alpha0Map)) {
         alpha0Map[deviceId] = alpha;
         beta0Map [deviceId] = beta;
-        lastPos   [deviceId] = { x: CX, y: CY };
+        rawPos   [deviceId] = { x: CX, y: CY };
+        smoothPos[deviceId] = { x: CX, y: CY };
       }
       if (!(deviceId in alpha0Map)) return;
 
-      // Winkel-Delta & Wrap
+      // Winkel-Delta + Wrap-Around
       let dA = alpha - alpha0Map[deviceId];
       if (dA > 180)  dA -= 360;
       if (dA < -180) dA += 360;
@@ -66,40 +79,41 @@
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // Auf Canvas mappen (invertiert: Rechtsneigung → Rechts)
+      // Mapping auf Canvas (invertiert)
       const x = CX - (dA / MAX_H) * CX;
       const y = CY - (dB / MAX_V) * CY;
 
-      // Linien-Segment
+      // Linien-Segment, falls gezeichnet wird
       if (isDrawing) {
-        const prev = lastPos[deviceId];
+        const prev = rawPos[deviceId];
         segments.push({
-          x1: prev.x,
-          y1: prev.y,
-          x2: x,
-          y2: y,
-          color,
-          deviceId
+          x1: prev.x, y1: prev.y,
+          x2: x,      y2: y,
+          color, deviceId
         });
       }
-      lastPos[deviceId]   = { x, y };
-      lastColor[deviceId] = color;
+
+      // Rohdaten speichern
+      rawPos[deviceId] = { x, y };
     });
 
+    // Canvas löschen
     socket.on("clear", () => {
       segments.length = 0;
-      ctx.clearRect(0, 0, c.width, c.height);
-      for (let id in lastPos)   delete lastPos[id];
+      ctx.clearRect(0,0,c.width,c.height);
+      for (let id in rawPos)    delete rawPos[id];
+      for (let id in smoothPos) delete smoothPos[id];
       for (let id in alpha0Map) delete alpha0Map[id];
       for (let id in beta0Map)  delete beta0Map[id];
-      for (let id in lastColor) delete lastColor[id];
+      for (let id in lastLight) delete lastLight[id];
     });
 
+    // Puls + Render-Loop
     let pulse = 0, growing = true;
     function render() {
-      ctx.clearRect(0, 0, c.width, c.height);
+      ctx.clearRect(0,0,c.width,c.height);
 
-      // Linien zeichnen
+      // 1) Linien zeichnen
       for (const s of segments) {
         ctx.strokeStyle = s.color;
         ctx.lineWidth   = 6;
@@ -109,32 +123,35 @@
         ctx.stroke();
       }
 
-      // Pulsierende Punkte & ggf. weißer Ring
+      // 2) Punkt-Glättung & Puls
       pulse += growing ? 0.2 : -0.2;
       if (pulse > 2)  growing = false;
       if (pulse < 0)  growing = true;
 
-      for (const id in lastPos) {
-        const pos   = lastPos[id];
+      for (const id in rawPos) {
+        const target = rawPos[id];
+        const smooth = smoothPos[id] = smoothPos[id] || { x:CX, y:CY };
+
+        // Glätten
+        smooth.x += (target.x - smooth.x) * SMOOTH;
+        smooth.y += (target.y - smooth.y) * SMOOTH;
+
         const col   = lastColor[id] || "hsl(0,100%,50%)";
+        const light = lastLight[id] || 50;
         const r     = 4 + pulse;
 
-        // Punkt
+        // Punkt zeichnen
         ctx.beginPath();
-        ctx.arc(pos.x, pos.y, r, 0, 2 * Math.PI);
+        ctx.arc(smooth.x, smooth.y, r, 0, 2*Math.PI);
         ctx.fillStyle = col;
         ctx.fill();
 
-        // Lightness aus HSL parsen
-        const m = col.match(/hsl\(\s*\d+\s*,\s*\d+%,\s*(\d+)%\s*\)/);
-        const light = m ? parseInt(m[1], 10) : 50;
-
-        // Weißen Ring zeichnen, wenn Lightness < 20%
+        // Weißer Ring bei Low-Light
         if (light < 20) {
           ctx.beginPath();
-          ctx.arc(pos.x, pos.y, r + 3, 0, 2 * Math.PI);
+          ctx.arc(smooth.x, smooth.y, r + 3, 0, 2*Math.PI);
           ctx.strokeStyle = "#fff";
-          ctx.lineWidth   = 3;
+          ctx.lineWidth   = 2;
           ctx.stroke();
         }
       }
