--- a/public/display.html
+++ b/public/display.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.12</title>
+  <title>Laserpointer Display v3.13</title>
   <style>
     body { margin:0; background:black; }
     canvas { display:block; margin:auto; background:black; }
@@ -14,53 +14,63 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.12 (multi-user + smoothing)</div>
+  <div id="version">v3.13 (multi-user + brushes)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    socket.emit("identify", { role: "display", deviceId: null });
+    socket.emit("identify", { role:"display", deviceId:null });
 
-    const c    = document.getElementById("canvas"),
-          ctx  = c.getContext("2d"),
-          CX   = c.width/2,
-          CY   = c.height/2;
+    const c      = document.getElementById("canvas"),
+          ctx    = c.getContext("2d"),
+          CX     = c.width/2,
+          CY     = c.height/2;
 
-    // Defaults (werden per Admin überschrieben)
-    let MAX_H   = 20,
-        MAX_V   = 20,
-        SMOOTH  = 0.15;
+    // Default-Einstellungen
+    let MAX_H   = 20, MAX_V = 20, SMOOTH = 0.15;
 
-    // Datenstrukturen pro Gerät
-    const alpha0Map   = {},        // Kalibrier-Nullpunkt alpha
-          beta0Map    = {},        // Kalibrier-Nullpunkt beta
-          rawPos      = {},        // deviceId → { x, y }
-          smoothPos   = {},        // deviceId → { x, y } geglättet
-          lastColor   = {},        // deviceId → color
-          lastLight   = {},        // deviceId → lightness %
-          segments    = [];        // alle Liniensegmente
+    // Pro Gerät: rohe und geglättete Positionen
+    const rawPos    = {},   // deviceId→{x,y}
+          smoothPos = {},   // deviceId→{x,y}
+          lastColor = {},   // deviceId→HSL
+          lastLight = {};   // deviceId→Lightness
+
+    // Kalibrier-Nullpunkte
+    const alpha0Map = {},
+          beta0Map  = {};
 
     ctx.lineCap  = "round";
     ctx.lineJoin = "round";
 
-    // Admin-Einstellungen live übernehmen
+    // Admin-Settings
     socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
-      if (typeof maxH   === "number") MAX_H  = maxH;
-      if (typeof maxV   === "number") MAX_V  = maxV;
-      if (typeof smooth === "number") SMOOTH = smooth;
+      if (typeof maxH  ==="number") MAX_H  = maxH;
+      if (typeof maxV  ==="number") MAX_V  = maxV;
+      if (typeof smooth==="number") SMOOTH = smooth;
     });
 
-    // Neue Bewegungsdaten
-    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
-      if (!deviceId || typeof alpha!=="number" || typeof beta!=="number") return;
+    // Clear
+    socket.on("clear", () => {
+      ctx.clearRect(0,0,c.width,c.height);
+      for (let k in rawPos)    delete rawPos[k];
+      for (let k in smoothPos) delete smoothPos[k];
+      for (let k in lastColor) delete lastColor[k];
+      for (let k in lastLight) delete lastLight[k];
+      for (let k in alpha0Map) delete alpha0Map[k];
+      for (let k in beta0Map)  delete beta0Map[k];
+    });
 
-      // Lightness aus HSL extrahieren
+    // Motion-Event mit brush
+    socket.on("motion", ({ alpha, beta, color, isDrawing, brush, deviceId }) => {
+      if (!deviceId || typeof alpha!=="number") return;
+
+      // parse lightness
       const m = color.match(/hsl\([^,]+,\s*[^,]+,\s*(\d+)%\)/);
       const light = m ? parseInt(m[1],10) : 50;
       lastLight[deviceId] = light;
       lastColor[deviceId] = color;
 
-      // Kalibrierung beim ersten Zeichnen
+      // Kalibrieren
       if (isDrawing && !(deviceId in alpha0Map)) {
         alpha0Map[deviceId] = alpha;
         beta0Map [deviceId] = beta;
@@ -69,96 +79,62 @@
       }
       if (!(deviceId in alpha0Map)) return;
 
-      // Winkel-Delta + Wrap-Around
+      // Winkel-Delta
       let dA = alpha - alpha0Map[deviceId];
-      if (dA > 180)  dA -= 360;
-      if (dA < -180) dA += 360;
+      if (dA>180) dA-=360;
+      if (dA<-180)dA+=360;
       let dB = beta - beta0Map[deviceId];
 
-      // Begrenzen
+      // clamp
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // Mapping auf Canvas (invertiert)
-      const x = CX - (dA / MAX_H) * CX;
-      const y = CY - (dB / MAX_V) * CY;
+      // map → rawPos
+      const x = CX - (dA/MAX_H)*CX;
+      const y = CY - (dB/MAX_V)*CY;
+      rawPos[deviceId] = { x, y };
 
-      // Linien-Segment, falls gezeichnet wird
-      if (isDrawing) {
-        const prev = rawPos[deviceId];
-        segments.push({
-          x1: prev.x, y1: prev.y,
-          x2: x,      y2: y,
-          color, deviceId
+      // smoothing
+      const sp = smoothPos[deviceId];
+      sp.x += (x - sp.x)*SMOOTH;
+      sp.y += (y - sp.y)*SMOOTH;
+
+      // draw brush shape at sp.x, sp.y
+      ctx.fillStyle   = color;
+      ctx.strokeStyle = color;
+      const R = 4;
+      if (brush === 1) {
+        // Punkt
+        ctx.beginPath();
+        ctx.arc(sp.x, sp.y, R, 0, 2*Math.PI);
+        ctx.fill();
+      } else if (brush === 2) {
+        // diagonale Linie 15px
+        ctx.lineWidth = 4;
+        ctx.beginPath();
+        ctx.moveTo(sp.x - 7.5, sp.y - 7.5);
+        ctx.lineTo(sp.x + 7.5, sp.y + 7.5);
+        ctx.stroke();
+      } else if (brush === 3) {
+        // 4 Punkte 3px, Abstand 10px
+        [ -5, 5 ].forEach(dx => {
+          [ -5, 5 ].forEach(dy => {
+            ctx.beginPath();
+            ctx.arc(sp.x + dx, sp.y + dy, 1.5, 0, 2*Math.PI);
+            ctx.fill();
+          });
         });
       }
 
-      // Rohdaten speichern
-      rawPos[deviceId] = { x, y };
-    });
-
-    // Canvas löschen
-    socket.on("clear", () => {
-      segments.length = 0;
-      ctx.clearRect(0,0,c.width,c.height);
-      for (let id in rawPos)    delete rawPos[id];
-      for (let id in smoothPos) delete smoothPos[id];
-      for (let id in alpha0Map) delete alpha0Map[id];
-      for (let id in beta0Map)  delete beta0Map[id];
-      for (let id in lastLight) delete lastLight[id];
-    });
-
-    // Puls + Render-Loop
-    let pulse = 0, growing = true;
-    function render() {
-      ctx.clearRect(0,0,c.width,c.height);
-
-      // 1) Linien zeichnen
-      for (const s of segments) {
-        ctx.strokeStyle = s.color;
-        ctx.lineWidth   = 6;
+      // optional: weißen Ring bei dunklen Farben
+      if (light < 20) {
+        ctx.lineWidth   = 3;
+        ctx.strokeStyle = "#fff";
         ctx.beginPath();
-        ctx.moveTo(s.x1, s.y1);
-        ctx.lineTo(s.x2, s.y2);
+        ctx.arc(sp.x, sp.y, R + 3, 0, 2*Math.PI);
         ctx.stroke();
       }
-
-      // 2) Punkt-Glättung & Puls
-      pulse += growing ? 0.2 : -0.2;
-      if (pulse > 2)  growing = false;
-      if (pulse < 0)  growing = true;
-
-      for (const id in rawPos) {
-        const target = rawPos[id];
-        const smooth = smoothPos[id] = smoothPos[id] || { x:CX, y:CY };
-
-        // Glätten
-        smooth.x += (target.x - smooth.x) * SMOOTH;
-        smooth.y += (target.y - smooth.y) * SMOOTH;
-
-        const col   = lastColor[id] || "hsl(0,100%,50%)";
-        const light = lastLight[id] || 50;
-        const r     = 4 + pulse;
-
-        // Punkt zeichnen
-        ctx.beginPath();
-        ctx.arc(smooth.x, smooth.y, r, 0, 2*Math.PI);
-        ctx.fillStyle = col;
-        ctx.fill();
-
-        // Weißer Ring bei Low-Light
-        if (light < 20) {
-          ctx.beginPath();
-          ctx.arc(smooth.x, smooth.y, r + 3, 0, 2*Math.PI);
-          ctx.strokeStyle = "#fff";
-          ctx.lineWidth   = 2;
-          ctx.stroke();
-        }
-      }
-
-      requestAnimationFrame(render);
-    }
-    render();
+    });
   </script>
 </body>
 </html>
