--- a/public/control.html
+++ b/public/control.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Control v3.12</title>
+  <title>Laserpointer Control v3.13</title>
   <style>
-    /* Keine Textauswahl oder Callouts */
+    /* Kein Text- oder Callout-Selektieren */
     *, button { 
       -webkit-touch-callout: none;
       -webkit-user-select: none;
@@ -13,98 +13,162 @@
       -ms-user-select: none;
       user-select: none;
     }
+
     body {
-      margin:0; padding:20px;
-      background:#000; color:#fff; font-family:sans-serif;
+      margin: 0;
+      padding: 20px;
+      background: #000;
+      color: #fff;
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       position: relative;
     }
+
     .version {
-      position:absolute; top:10px; right:10px;
-      font-size:14px; opacity:0.7;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      font-size: 14px;
+      opacity: 0.7;
     }
-    .setting {
-      margin:20px 0; display:flex; align-items:center; gap:10px;
+
+    /* Container für alle Controls */
+    #controls {
+      width: 100%;
+      max-width: 400px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      margin-bottom: 100px; /* Platz für den Laserbutton */
     }
-    input[type="range"] {
-      -webkit-appearance:none; width:80%; height:20px;
-      border-radius:10px; background:transparent; cursor:pointer;
+
+    .slider-group {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      width: 100%;
     }
-    input[type="range"]::-webkit-slider-runnable-track {
-      height:20px; border-radius:10px;
+    .slider-group input[type="range"] {
+      flex: 1;
+      height: 20px;
+      border-radius: 10px;
+      background: transparent; /* JS setzt gradient */
+      cursor: pointer;
+      -webkit-appearance: none;
     }
-    input[type="range"]::-webkit-slider-thumb {
-      -webkit-appearance:none; width:24px; height:24px;
-      margin-top:-2px; background:#fff; border:1px solid #888;
-      border-radius:50%;
+    /* WebKit-Track & Thumb */
+    .slider-group input[type="range"]::-webkit-slider-runnable-track {
+      height: 20px;
+      border-radius: 10px;
     }
-    input[type="range"]::-moz-range-track {
-      height:20px; border-radius:10px;
+    .slider-group input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 24px; height: 24px;
+      margin-top: -2px;
+      background: #fff;
+      border: 1px solid #888;
+      border-radius: 50%;
     }
-    input[type="range"]::-moz-range-thumb {
-      width:24px; height:24px; background:#fff;
-      border:1px solid #888; border-radius:50%;
+    /* Firefox-Track & Thumb */
+    .slider-group input[type="range"]::-moz-range-track {
+      height: 20px;
+      border-radius: 10px;
     }
-    .value { width:50px; text-align:right; font-size:1rem; }
+    .slider-group input[type="range"]::-moz-range-thumb {
+      width: 24px; height: 24px;
+      background: #fff;
+      border: 1px solid #888;
+      border-radius: 50%;
+    }
+
+    .value {
+      width: 50px;
+      text-align: right;
+      font-size: 1rem;
+    }
+
     #preview {
-      width:40px; height:40px; border:2px solid #fff;
-      box-sizing:border-box; background:hsl(0,100%,50%);
+      width: 40px; height: 40px;
+      border: 2px solid #fff;
+      box-sizing: border-box;
+      background: hsl(0,100%,50%);
     }
+
     #brushes {
-      display:flex; justify-content:center; gap:20px;
-      margin:20px 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
     }
     .brush {
-      width:50px; height:50px; border:2px solid #888;
-      background:#111; box-sizing:border-box; cursor:pointer;
+      width: 50px;
+      height: 50px;
+      background: #111;
+      border: 2px solid #888;
+      box-sizing: border-box;
+      cursor: pointer;
     }
     .brush.selected {
-      border-color:#fff;
+      border-color: #fff;
     }
+
     #laserBtn {
-      position:absolute; bottom:15%; left:50%;
-      transform:translateX(-50%); width:80px; height:80px;
-      border-radius:50%; background:#fff; border:none;
-      touch-action:none;
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background: #fff;
+      border: none;
+      touch-action: none;
+      z-index: 10;
     }
+
+    /* Gyro-Permission Button */
     #permBtn {
-      position:absolute; top:50%; left:50%;
-      transform:translate(-50%,-50%);
-      padding:12px 20px; font-size:16px; z-index:1000;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 12px 20px;
+      font-size: 16px;
+      z-index: 1000;
     }
   </style>
 </head>
 <body>
-  <!-- Gyro-Permission -->
   <button id="permBtn">Gyro freigeben</button>
+  <div class="version">v3.13</div>
 
-  <div class="version">v3.12</div>
-
-  <!-- Hue -->
-  <div class="setting">
-    <input id="hue" type="range" min="0" max="360" value="0"/>
-    <span id="hueVal" class="value">0°</span>
+  <div id="controls">
+    <!-- Hue -->
+    <div class="slider-group">
+      <input id="hue" type="range" min="0" max="360" value="0"/>
+      <span id="hueVal" class="value">0°</span>
+    </div>
+    <!-- Intensity -->
+    <div class="slider-group">
+      <input id="intensity" type="range" min="0" max="100" value="50"/>
+      <span id="intVal" class="value">50 %</span>
+      <div id="preview"></div>
+    </div>
+    <!-- Brushes -->
+    <div id="brushes">
+      <canvas class="brush" id="brush1" data-brush="1" width="50" height="50"></canvas>
+      <canvas class="brush" id="brush2" data-brush="2" width="50" height="50"></canvas>
+      <canvas class="brush" id="brush3" data-brush="3" width="50" height="50"></canvas>
+    </div>
   </div>
-  <!-- Intensity -->
-  <div class="setting">
-    <input id="intensity" type="range" min="0" max="100" value="50"/>
-    <span id="intVal" class="value">50 %</span>
-    <div id="preview"></div>
-  </div>
 
-  <!-- Brushes -->
-  <div id="brushes">
-    <canvas class="brush" id="brush1" data-brush="1" width="50" height="50"></canvas>
-    <canvas class="brush" id="brush2" data-brush="2" width="50" height="50"></canvas>
-    <canvas class="brush" id="brush3" data-brush="3" width="50" height="50"></canvas>
-  </div>
-
-  <!-- Laserbutton -->
   <button id="laserBtn"></button>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    // Persistente Geräte-ID
+    // persistente Geräte-ID
     let deviceId = localStorage.getItem("deviceId");
     if (!deviceId) {
       deviceId = crypto.randomUUID();
@@ -113,22 +177,22 @@
     socket.emit("identify", { role: "control", deviceId });
 
     // Elemente
-    const permBtn    = document.getElementById("permBtn");
-    const hueSlider  = document.getElementById("hue"),
-          hueVal     = document.getElementById("hueVal");
-    const intSlider  = document.getElementById("intensity"),
-          intVal     = document.getElementById("intVal");
-    const preview    = document.getElementById("preview");
-    const laserBtn   = document.getElementById("laserBtn");
-    const brushEls   = document.querySelectorAll(".brush");
+    const permBtn   = document.getElementById("permBtn");
+    const hueSlider = document.getElementById("hue"),
+          hueVal    = document.getElementById("hueVal");
+    const intSlider = document.getElementById("intensity"),
+          intVal    = document.getElementById("intVal");
+    const preview   = document.getElementById("preview");
+    const laserBtn  = document.getElementById("laserBtn");
+    const brushEls  = document.querySelectorAll(".brush");
 
-    let isDrawing   = false;
-    let hue         = 0;
-    let intensity   = 50;
-    let colorHSL    = `hsl(0,100%,50%)`;
-    let brushType   = 1;  // 1,2 oder 3
+    let isDrawing = false,
+        hue       = 0,
+        intensity = 50,
+        colorHSL  = `hsl(0,100%,50%)`,
+        brushType = 1;
 
-    // Permission-Button
+    // Gyro-Permission
     permBtn.addEventListener("click", async () => {
       if (DeviceOrientationEvent.requestPermission) {
         try {
@@ -145,23 +209,25 @@
     });
 
     function sendOri(e) {
-      if (e.alpha==null||e.beta==null) return;
+      if (e.alpha == null || e.beta == null) return;
       socket.emit("motion", {
-        alpha: e.alpha,
-        beta:  e.beta,
-        color: colorHSL,
-        brush: brushType,
+        alpha:    e.alpha,
+        beta:     e.beta,
+        color:    colorHSL,
+        brush:    brushType,
         isDrawing
       });
     }
 
-    // Slider-Hintergründe
+    // Slider-Hintergründe setzen
     function setHueBackground() {
       hueSlider.style.background =
         'linear-gradient(to right, ' +
-        'hsl(0,100%,50%),hsl(60,100%,50%),hsl(120,100%,50.),' +
-        'hsl(180,100%,50%),hsl(240,100%,50.),hsl(300,100%,50.),' +
-        'hsl(360,100%,50.))';
+          'hsl(0,100%,50%), hsl(60,100%,50%), ' +
+          'hsl(120,100%,50%), hsl(180,100%,50%), ' +
+          'hsl(240,100%,50%), hsl(300,100%,50%), ' +
+          'hsl(360,100%,50%)' +
+        ')';
     }
     function setIntensityBackground() {
       const mid = `hsl(${hue},100%,50%)`;
@@ -179,66 +245,64 @@
       setIntensityBackground();
     }
 
-    // Initial setup
+    // Initial Setup
     setHueBackground();
     setIntensityBackground();
     updateColor();
     hueSlider.addEventListener("input", updateColor);
     intSlider.addEventListener("input", updateColor);
 
-    // Brush-Setup & Preview zeichnen
+    // Brush-Vorschauen & Auswahl
     brushEls.forEach(el => {
       const id = +el.dataset.brush;
       const ctx = el.getContext("2d");
-      ctx.clearRect(0,0,50,50);
-      ctx.strokeStyle = "#fff";
-      ctx.fillStyle   = "#fff";
-
+      // Vorschau zeichnen
       if (id === 1) {
-        // Punkt in Mitte
+        ctx.fillStyle = "#fff";
         ctx.beginPath();
         ctx.arc(25,25,5,0,2*Math.PI);
         ctx.fill();
-      } else if (id === 2) {
-        // Diagonale Linie Länge 15
+      }
+      if (id === 2) {
+        ctx.strokeStyle = "#fff";
         ctx.lineWidth = 4;
         ctx.beginPath();
         ctx.moveTo(17.5,17.5);
         ctx.lineTo(32.5,32.5);
         ctx.stroke();
-      } else if (id === 3) {
-        // Vier Punkte 3px, Abstand 10
-        const pts = [15,35];
-        pts.forEach(x=>{
-          pts.forEach(y=>{
+      }
+      if (id === 3) {
+        ctx.fillStyle = "#fff";
+        [15,35].forEach(x =>
+          [15,35].forEach(y => {
             ctx.beginPath();
             ctx.arc(x,y,1.5,0,2*Math.PI);
             ctx.fill();
-          });
-        });
+          })
+        );
       }
-      // Klick-Handler
-      el.addEventListener("click", ()=>{
-        brushEls.forEach(b=>b.classList.remove("selected"));
+      // Klick = Auswahl
+      el.addEventListener("click", () => {
+        brushEls.forEach(b => b.classList.remove("selected"));
         el.classList.add("selected");
         brushType = id;
       });
     });
-    // Default-Auswahl
+    // Default
     document.querySelector(".brush[data-brush='1']").classList.add("selected");
 
-    // Laserbutton Events
-    laserBtn.addEventListener("touchstart", e=>{
+    // Laserbutton
+    laserBtn.addEventListener("touchstart", e => {
       e.preventDefault();
       isDrawing = true;
     });
-    laserBtn.addEventListener("touchend", e=>{
+    laserBtn.addEventListener("touchend", e => {
       e.preventDefault();
       isDrawing = false;
     });
 
-    // Kontextmenü unterdrücken
-    document.addEventListener("contextmenu", e=>e.preventDefault());
+    // Kontextmenü blocken
+    document.addEventListener("contextmenu", e => e.preventDefault());
   </script>
 </body>
 </html>
