--- a/public/control.html
+++ b/public/control.html
@@ -3,17 +3,14 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Control v3.13</title>
+  <title>Laserpointer Control v3.14</title>
   <style>
-    /* Kein Text- oder Callout-Selektieren */
-    *, button { 
+    /* Keine Auswahl/Callout */
+    *, button {
       -webkit-touch-callout: none;
       -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
       user-select: none;
     }
-
     body {
       margin: 0;
       padding: 20px;
@@ -23,9 +20,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      height: 100vh;
+      box-sizing: border-box;
       position: relative;
     }
-
     .version {
       position: absolute;
       top: 10px;
@@ -33,32 +31,27 @@
       font-size: 14px;
       opacity: 0.7;
     }
-
-    /* Container für alle Controls */
     #controls {
       width: 100%;
       max-width: 400px;
       display: flex;
       flex-direction: column;
       gap: 20px;
-      margin-bottom: 100px; /* Platz für den Laserbutton */
+      margin-top: 40px;
     }
-
     .slider-group {
       display: flex;
       align-items: center;
       gap: 10px;
-      width: 100%;
     }
     .slider-group input[type="range"] {
       flex: 1;
       height: 20px;
       border-radius: 10px;
-      background: transparent; /* JS setzt gradient */
+      background: transparent; /* wird per JS gesetzt */
       cursor: pointer;
       -webkit-appearance: none;
     }
-    /* WebKit-Track & Thumb */
     .slider-group input[type="range"]::-webkit-slider-runnable-track {
       height: 20px;
       border-radius: 10px;
@@ -71,7 +64,6 @@
       border: 1px solid #888;
       border-radius: 50%;
     }
-    /* Firefox-Track & Thumb */
     .slider-group input[type="range"]::-moz-range-track {
       height: 20px;
       border-radius: 10px;
@@ -82,28 +74,28 @@
       border: 1px solid #888;
       border-radius: 50%;
     }
-
     .value {
       width: 50px;
       text-align: right;
       font-size: 1rem;
     }
-
     #preview {
       width: 40px; height: 40px;
       border: 2px solid #fff;
       box-sizing: border-box;
       background: hsl(0,100%,50%);
     }
-
+    /* Pinsel ganz unten */
     #brushes {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       display: flex;
-      justify-content: center;
       gap: 20px;
     }
     .brush {
-      width: 50px;
-      height: 50px;
+      width: 50px; height: 50px;
       background: #111;
       border: 2px solid #888;
       box-sizing: border-box;
@@ -112,22 +104,20 @@
     .brush.selected {
       border-color: #fff;
     }
-
+    /* Laser-Button ins untere Drittel */
     #laserBtn {
       position: absolute;
-      bottom: 20px;
+      bottom: 33%;
       left: 50%;
       transform: translateX(-50%);
-      width: 80px;
-      height: 80px;
+      width: 80px; height: 80px;
       border-radius: 50%;
       background: #fff;
       border: none;
       touch-action: none;
       z-index: 10;
     }
-
-    /* Gyro-Permission Button */
+    /* Permission-Button */
     #permBtn {
       position: absolute;
       top: 50%;
@@ -141,34 +131,34 @@
 </head>
 <body>
   <button id="permBtn">Gyro freigeben</button>
-  <div class="version">v3.13</div>
+  <div class="version">v3.14</div>
 
   <div id="controls">
-    <!-- Hue -->
+    <!-- Farbton -->
     <div class="slider-group">
       <input id="hue" type="range" min="0" max="360" value="0"/>
       <span id="hueVal" class="value">0°</span>
     </div>
-    <!-- Intensity -->
+    <!-- Intensität -->
     <div class="slider-group">
       <input id="intensity" type="range" min="0" max="100" value="50"/>
       <span id="intVal" class="value">50 %</span>
       <div id="preview"></div>
     </div>
-    <!-- Brushes -->
-    <div id="brushes">
-      <canvas class="brush" id="brush1" data-brush="1" width="50" height="50"></canvas>
-      <canvas class="brush" id="brush2" data-brush="2" width="50" height="50"></canvas>
-      <canvas class="brush" id="brush3" data-brush="3" width="50" height="50"></canvas>
-    </div>
   </div>
 
   <button id="laserBtn"></button>
 
+  <!-- Pinsel-Auswahl -->
+  <div id="brushes">
+    <canvas class="brush" id="brush1" data-brush="1" width="50" height="50"></canvas>
+    <canvas class="brush" id="brush2" data-brush="2" width="50" height="50"></canvas>
+    <canvas class="brush" id="brush3" data-brush="3" width="50" height="50"></canvas>
+  </div>
+
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    // persistente Geräte-ID
     let deviceId = localStorage.getItem("deviceId");
     if (!deviceId) {
       deviceId = crypto.randomUUID();
@@ -176,23 +166,19 @@
     }
     socket.emit("identify", { role: "control", deviceId });
 
-    // Elemente
     const permBtn   = document.getElementById("permBtn");
-    const hueSlider = document.getElementById("hue"),
-          hueVal    = document.getElementById("hueVal");
-    const intSlider = document.getElementById("intensity"),
-          intVal    = document.getElementById("intVal");
+    const hueSlider = document.getElementById("hue"),  hueVal  = document.getElementById("hueVal");
+    const intSlider = document.getElementById("intensity"), intVal = document.getElementById("intVal");
     const preview   = document.getElementById("preview");
     const laserBtn  = document.getElementById("laserBtn");
     const brushEls  = document.querySelectorAll(".brush");
 
     let isDrawing = false,
-        hue       = 0,
+        hue = 0,
         intensity = 50,
-        colorHSL  = `hsl(0,100%,50%)`,
+        colorHSL = `hsl(0,100%,50%)`,
         brushType = 1;
 
-    // Gyro-Permission
     permBtn.addEventListener("click", async () => {
       if (DeviceOrientationEvent.requestPermission) {
         try {
@@ -200,8 +186,8 @@
           if (res === "granted") {
             window.addEventListener("deviceorientation", sendOri);
             permBtn.style.display = "none";
-          } else alert("Gyro-Zugriff verweigert");
-        } catch(e){ console.error(e); }
+          }
+        } catch {}
       } else {
         window.addEventListener("deviceorientation", sendOri);
         permBtn.style.display = "none";
@@ -211,32 +197,27 @@
     function sendOri(e) {
       if (e.alpha == null || e.beta == null) return;
       socket.emit("motion", {
-        alpha:    e.alpha,
-        beta:     e.beta,
-        color:    colorHSL,
-        brush:    brushType,
+        alpha: e.alpha,
+        beta: e.beta,
+        color: colorHSL,
+        brush: brushType,
         isDrawing
       });
     }
 
-    // Slider-Hintergründe setzen
     function setHueBackground() {
       hueSlider.style.background =
         'linear-gradient(to right, ' +
-          'hsl(0,100%,50%), hsl(60,100%,50%), ' +
-          'hsl(120,100%,50%), hsl(180,100%,50%), ' +
-          'hsl(240,100%,50%), hsl(300,100%,50%), ' +
-          'hsl(360,100%,50%)' +
-        ')';
+        'hsl(0,100%,50%), hsl(60,100%,50%), hsl(120,100%,50%), ' +
+        'hsl(180,100%,50%), hsl(240,100%,50%), hsl(300,100%,50%), hsl(360,100%,50%))';
     }
     function setIntensityBackground() {
       const mid = `hsl(${hue},100%,50%)`;
       intSlider.style.background =
         `linear-gradient(to right, black, ${mid}, white)`;
     }
-
     function updateColor() {
-      hue       = +hueSlider.value;
+      hue = +hueSlider.value;
       intensity = +intSlider.value;
       hueVal.textContent = hue + "°";
       intVal.textContent = intensity + " %";
@@ -245,18 +226,16 @@
       setIntensityBackground();
     }
 
-    // Initial Setup
     setHueBackground();
     setIntensityBackground();
     updateColor();
     hueSlider.addEventListener("input", updateColor);
     intSlider.addEventListener("input", updateColor);
 
-    // Brush-Vorschauen & Auswahl
     brushEls.forEach(el => {
       const id = +el.dataset.brush;
       const ctx = el.getContext("2d");
-      // Vorschau zeichnen
+      ctx.clearRect(0,0,50,50);
       if (id === 1) {
         ctx.fillStyle = "#fff";
         ctx.beginPath();
@@ -281,17 +260,14 @@
           })
         );
       }
-      // Klick = Auswahl
       el.addEventListener("click", () => {
         brushEls.forEach(b => b.classList.remove("selected"));
         el.classList.add("selected");
         brushType = id;
       });
     });
-    // Default
     document.querySelector(".brush[data-brush='1']").classList.add("selected");
 
-    // Laserbutton
     laserBtn.addEventListener("touchstart", e => {
       e.preventDefault();
       isDrawing = true;
@@ -301,7 +277,6 @@
       isDrawing = false;
     });
 
-    // Kontextmenü blocken
     document.addEventListener("contextmenu", e => e.preventDefault());
   </script>
 </body>
